fix and adjust v2

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     float: left;
     width: 33%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: fit-content; /* Should be removed. Only for demonstration */
 }
 
 /* Clear floats after the columns */
@@ -116,8 +116,8 @@
 </div>
 <!-- Projects Section -->
 <div class="w3-row-padding w3-light-grey w3-padding-16" >
-	<div class="w3-container w3-center w3-padding-32" id="projects">
-    	<h3 style="font-size: 25px" class="w3-border-bottom w3-border-light-black w3-padding-16">MY PROJECTS</h3>
+	<div class="w3-container w3-center" id="projects">
+    	<h3 style="font-size: 25px" class="w3-border-bottom w3-border-light-black w3-padding-16">PROJECTS</h3>
 	</div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <h3>Blocks</h3>
@@ -251,7 +251,7 @@
       <p>Building a neural network to classify handwritten digits with machine learning.</p>
     </div>
 </div>
-<p>To follow Berkeley's academic integrity policies, I will not post any of my work online. If you would like to see my code, feel free to contant me below!</p>
+<p>To follow Berkeley's academic integrity policies, I will not post any of my work online. If you would like to see my code or work, feel free to contact me below!</p>
 
 
   <!-- Contact Section -->
