--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
         height:42px;border:0;>
       </a>
     </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <h3>Classify V.2</h3>
+      <a href="heartpaper.pdf" target="_blank">
+        <img src="PulmonaryVeins.PNG" alt="HeartModel" style="width:100%";
+        height:42px;border:0;>
+      </a>
+    </div>
 </div>
 <div class='w3-row-padding w3-light-grey'>
   <div class="w3-col l3 m6 w3-margin-bottom">    	
@@ -250,6 +257,25 @@
       <p class="w3-opacity">CS188 [Fall 2022]</p>
       <p>Building a neural network to classify handwritten digits with machine learning.</p>
     </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">    	
+      <p class="w3-opacity">MSU Research [May 2020 - August 2021]</p>
+      <p>Building a model of the heart with realistic fluid dynamics to simulate cryoballoon alblation.</p>
+    </div>
+</div>
+<div class='w3-row-padding w3-light-grey'>
+  <div class="w3-col l3 m6 w3-margin-bottom">  	
+      <h3>Facial and Body Detection</h3>
+      <a href="https://github.com/timesler/facenet-pytorch" target="_blank">
+        <img src="detect.jpg" alt="BodyDetection" style="width:100%";
+        height:42px;border:0;>
+      </a>
+    </div>
+</div>
+<div class='w3-row-padding w3-light-grey'>
+  <div class="w3-col l3 m6 w3-margin-bottom">    	
+    <p class="w3-opacity">MSU Research [May 2022 - August 2022]</p>
+    <p>Utilize facial and body detection software to detect faces and bodies in field and controlled environments.</p>
+  </div>
 </div>
 <p>To follow Berkeley's academic integrity policies, I will not post any of my work online. If you would like to see my code or work, feel free to contact me below!</p>
 
