--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="w3-col m6 w3-padding-large">
       <p style="font-size:24px;" align=left>
      	Hello, I'm Eric! I am an undergraduate student at University of California, Berkeley double majoring in Electrical Engineering and Computer Science, and Data Science. Here's what I've been up to over the past few years!</p>
-      <a href="ResumeBasic.pdf" target="_blank">
+      <a href="Resume V2.pdf" target="_blank">
     <button class="w3-button w3-black w3-section" type="submit">
         <i class="fa fa-paper-plane"></i> Resum&eacute;
       </button></a>
