--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="pic.jpg" alt="background" width="1500" height="900">
+  <img class="w3-image" src="SNbPyeWzyFHy_1500_500.png" alt="background" width="1500" height="900">
   <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-off"><b>Eric Huang</b></span> <!-- <span class="w3-xxxlarge w3-text-white">Sienko</span> --></h1>
+    <!--<h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-off"><b>Eric Huang</b></span></h1>-->
   </div>
 </header>
 
@@ -42,7 +42,7 @@
     <div class="w3-col m6 w3-padding-large">
       <p style="font-size:24px;" align=left>
      	Hello, I'm Eric! I am an undergraduate student at University of California, Berkeley double majoring in Electrical Engineering and Computer Science, and Data Science. Here's what I've been up to over the past few years!</p>
-      <a href="Resume V2.pdf" target="_blank">
+      <a href="Resume SWE 1-4-2024.pdf" target="_blank">
     <button class="w3-button w3-black w3-section" type="submit">
         <i class="fa fa-paper-plane"></i> Resum&eacute;
       </button></a>
