--- a/index.html
+++ b/index.html
@@ -95,18 +95,21 @@
         <p>Machine Structures-<a href="https://cs61c.org/fa22/" title="CS 61C class website" target="_blank">CS61C</a></p>
         <p>Discrete Math & Probability Theory-<a href="http://www.eecs70.org/" title="CS 70 class website" target="_blank">CS70</a></p>
         <p>Computer Security-<a href="https://fa22.cs161.org/" title="CS 161 class website" target="_blank">CS161</a></p>
+        <p>Operating Systems and System Programming-<a href="https://cs162.org/" title="CS 162 class website" target="_blank">CS162</a></p>
 		  	<p>Efficient Algorithms & Intractable Problems-<a href="https://cs170.org/" title="CS 170 class website" target="_blank">CS170</a></p>
         <p>Introduction to Database Systems-<a href="https://cs186berkeley.net/" title="CS 186 class website" target="_blank">CS186</a></p>
 				<p>Introduction to Artificial Intelligence-<a href="https://inst.eecs.berkeley.edu/~cs188/fa22/" title="CS 188 class website" target="_blank">CS188</a></p>				
 			</div>
 			<div align="left" class="column3">
 				<h1 style="font-size: 20px">DATA SCIENCE:</h1>
-				<p>The Foundations of Data Science-<a href="http://www.data8.org/sp23/" title="Data 8 class website" target="_blank">DATA 8</a></p>    
+				<p>The Foundations of Data Science-<a href="http://www.data8.org/sp23/" title="Data 8 class website" target="_blank">DATA 8</a></p>
+				<p>Principles and Techniques of Data Science-<a href="https://ds100.org/su23/" title="Data 100 class website" target="_blank">DATA 100</a></p>    
 			</div>
 			<div align="left" class="column3">
 				<h1 style="font-size: 20px">ELECTRICAL ENGINEERING:</h1>
 				<p>Designing Information Systems I-<a href="http://inst.eecs.berkeley.edu/~ee16a/fa21/" title="EE16A class website" target="_blank">EE16A</a></p>
 				<p>Designing Information Systems II-<a href="http://inst.eecs.berkeley.edu/~ee16b/sp22/" title="EE16B class website" target="_blank">EE16B</a></p>
+				<p>Optimization Models in Engineering-<a href="https://eecs127.github.io/" title="EE127 class website" target="_blank">EECS127</a></p>
 			</div>
 		</div>
 	</div>
