--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="w3-col m6 w3-padding-large">
       <p style="font-size:24px;" align=left>
      	Hello, I'm Eric! I am an undergraduate student at University of California, Berkeley double majoring in Electrical Engineering and Computer Science, and Data Science. Here's what I've been up to over the past few years!</p>
-      <a href="Resume SWE 1-4-2024.pdf" target="_blank">
+      <a href="Resume SWE 9-7-2024.pdf" target="_blank">
     <button class="w3-button w3-black w3-section" type="submit">
         <i class="fa fa-paper-plane"></i> Resum&eacute;
       </button></a>
@@ -97,13 +97,16 @@
         <p>Computer Security-<a href="https://fa22.cs161.org/" title="CS 161 class website" target="_blank">CS161</a></p>
         <p>Operating Systems and System Programming-<a href="https://cs162.org/" title="CS 162 class website" target="_blank">CS162</a></p>
 		  	<p>Efficient Algorithms & Intractable Problems-<a href="https://cs170.org/" title="CS 170 class website" target="_blank">CS170</a></p>
+        <p>Cryptography-<a href="https://eecs171.com/" title="CS 171 class website" target="_blank">CS171</a></p>
         <p>Introduction to Database Systems-<a href="https://cs186berkeley.net/" title="CS 186 class website" target="_blank">CS186</a></p>
 				<p>Introduction to Artificial Intelligence-<a href="https://inst.eecs.berkeley.edu/~cs188/fa22/" title="CS 188 class website" target="_blank">CS188</a></p>				
 			</div>
 			<div align="left" class="column3">
 				<h1 style="font-size: 20px">DATA SCIENCE:</h1>
 				<p>The Foundations of Data Science-<a href="http://www.data8.org/sp23/" title="Data 8 class website" target="_blank">DATA 8</a></p>
-				<p>Principles and Techniques of Data Science-<a href="https://ds100.org/su23/" title="Data 100 class website" target="_blank">DATA 100</a></p>    
+				<p>Principles and Techniques of Data Science-<a href="https://ds100.org/su23/" title="Data 100 class website" target="_blank">DATA 100</a></p>
+				<p>Concepts of Probability-<a title="STAT 134 class website" target="_blank">STAT 134</a></p>    
+
 			</div>
 			<div align="left" class="column3">
 				<h1 style="font-size: 20px">ELECTRICAL ENGINEERING:</h1>
@@ -153,19 +156,15 @@
 </div>
 <div class='w3-row-padding w3-light-grey'>
 	<div class="w3-col l3 m6 w3-margin-bottom">
-      <p class="w3-opacity">CS61B [Spring 2022]</p>
       <p>A recreation of the popular Blocks Puzzle game.</p>    	
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <p class="w3-opacity">CS61B [Spring 2022]</p>
       <p>Computer version of the infamous Enigma machines used by Germany in WW2.</p>    	
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <p class="w3-opacity">CS61B [Spring 2022]</p>
       <p>A recreation of the popular Ataxx board game and AI Computer.</p>    	
     </div>	
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <p class="w3-opacity">CS61B [Spring 2022]</p>
       <p>Redesigned implementation of a version-control system similar to Git</p>    	
     </div>
 </div>
@@ -201,19 +200,15 @@
 </div>
 <div class='w3-row-padding w3-light-grey'>
   <div class="w3-col l3 m6 w3-margin-bottom">    	
-    <p class="w3-opacity">EECS16B [Spring 2022]</p>
     <p>A three wheel mobile robot that responds to stimulus in the form of sounds.</p>
   </div>
 	<div class="w3-col l3 m6 w3-margin-bottom">   	
-      <p class="w3-opacity">CS61C [Fall 2022]</p>
       <p>A recreation of the popular Snake computer game.</p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">    	
-      <p class="w3-opacity">CS61C [Fall 2022]</p>
       <p>An assembly based code to classify handwritten digits with machine learning.</p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">    	
-      <p class="w3-opacity">CS61C [Fall 2022]</p>
       <p>Building a CPU capable of running RISC-V assembly instructions.</p>
     </div>
 </div>
@@ -240,7 +235,7 @@
       </a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <h3>Classify V.2</h3>
+      <h3>3D Modeling</h3>
       <a href="heartpaper.pdf" target="_blank">
         <img src="PulmonaryVeins.PNG" alt="HeartModel" style="width:100%";
         height:42px;border:0;>
@@ -249,19 +244,15 @@
 </div>
 <div class='w3-row-padding w3-light-grey'>
   <div class="w3-col l3 m6 w3-margin-bottom">    	
-    <p class="w3-opacity">CS161 [Fall 2022]</p>
     <p>An end-to-end encrypted, efficient file sharing system that provides guaranteed confidentiality, integrity, and authenticity.</p>
   </div>
 	<div class="w3-col l3 m6 w3-margin-bottom">   	
-      <p class="w3-opacity">CS188 [Fall 2022]</p>
       <p>AI that utilizes reinforced learning and value iteration to solve the popular Pac-Man computer game.</p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">    	
-      <p class="w3-opacity">CS188 [Fall 2022]</p>
       <p>Building a neural network to classify handwritten digits with machine learning.</p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">    	
-      <p class="w3-opacity">MSU Research [May 2020 - August 2021]</p>
       <p>Building a model of the heart with realistic fluid dynamics to simulate cryoballoon alblation.</p>
     </div>
 </div>
@@ -273,11 +264,21 @@
         height:42px;border:0;>
       </a>
     </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">  	
+      <h3>PintOS Operating System</h3>
+      <a href="https://cs162.org/static/proj/proj-pregame/" target="_blank">
+        <img src="pintOS.png" alt="pintOS" style="width:100%";
+        height:42px;border:0;>
+      </a>
+    </div>
 </div>
 <div class='w3-row-padding w3-light-grey'>
   <div class="w3-col l3 m6 w3-margin-bottom">    	
-    <p class="w3-opacity">MSU Research [May 2022 - August 2022]</p>
     <p>Utilize facial and body detection software to detect faces and bodies in field and controlled environments.</p>
+  </div>
+  <div class="w3-col l3 m6 w3-margin-bottom">    	
+    <p>Implemented critical OS components including file systems, thread scheduling, user programs,
+      virtual memory, kernel development, low-level programming, synchronization, and debugging.</p>
   </div>
 </div>
 <p>To follow Berkeley's academic integrity policies, I will not post any of my work online. If you would like to see my code or work, feel free to contact me below!</p>
