added msu research

--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
     <div class="w3-col l3 m6 w3-margin-bottom">    	
       <p>Building a neural network to classify handwritten digits with machine learning.</p>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">    	
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <p class="w3-opacity">MSU Research [May 2020 - August 2021]</p>    	
       <p>Building a model of the heart with realistic fluid dynamics to simulate cryoballoon alblation.</p>
     </div>
 </div>
@@ -273,7 +274,8 @@
     </div>
 </div>
 <div class='w3-row-padding w3-light-grey'>
-  <div class="w3-col l3 m6 w3-margin-bottom">    	
+  <div class="w3-col l3 m6 w3-margin-bottom">
+    <p class="w3-opacity">MSU Research [May 2022 - August 2022]</p>    	
     <p>Utilize facial and body detection software to detect faces and bodies in field and controlled environments.</p>
   </div>
   <div class="w3-col l3 m6 w3-margin-bottom">    	
